--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "format": "prettier --write pages/ components/ server/"
   },
   "dependencies": {
+    "@nuxt/eslint": "^0.5.7",
+    "eslint": "^9.10.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "nuxt": "^3.13.0",
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.2",
     "vue": "latest",
     "vue-router": "latest"
   }
