--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "format": "prettier --write pages/ components/ server/"
+    "format": "prettier --write pages/ components/ server/",
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix"
   },
   "dependencies": {
     "@nuxt/eslint": "^0.5.7",
