--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "typescript": "^5.6.2",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "mongoose": "^8.6.3",
+    "mongoose-bcrypt": "^1.11.0"
   }
 }
