--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "prettier": "^3.3.3",
     "typescript": "^5.6.2",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "mongoose": "^8.6.3",
+    "mongoose-bcrypt": "^1.11.0"
   },
   "devDependencies": {
-    "mongoose": "^8.6.3",
-    "mongoose-bcrypt": "^1.11.0",
     "vue-tsc": "^2.1.6"
   }
 }
