--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.12",
     "vue-tsc": "^2.1.6"
   }
 }
