--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "mongoose": "^8.6.3",
     "mongoose-bcrypt": "^1.11.0",
     "nuxt": "^3.13.0",
-    "prettier": "^3.3.3",
     "typescript": "^5.6.2",
     "vue": "latest",
     "vue-router": "latest"
@@ -29,6 +28,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.12",
     "vue-tsc": "^2.1.6"
   }
