--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "format": "prettier --write pages/ components/ server/",
-    "lint": "eslint .",
-    "lint-fix": "eslint . --fix"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@nuxt/eslint": "^0.5.7",
