--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,7 +1,6 @@
 name: Build
 
-on:
-  push
+on: push
 
 jobs:
   build:
@@ -23,4 +22,3 @@ jobs:
 
       - name: Build application
         run: just
-
