--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "format": "prettier --write pages/ components/ server/",
+    "format": "prettier --write .",
     "lint": "eslint ."
   },
   "dependencies": {
