--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,5 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
   "extends": "./.nuxt/tsconfig.json",
-  "includes": [
-    "types/*.d.ts"
-  ]
+  "includes": ["types/*.d.ts"]
 }
