--- a/.github/workflows/formatting.yaml
+++ b/.github/workflows/formatting.yaml
@@ -3,7 +3,7 @@ name: Formatting
 on: push
 
 jobs:
-  vue:
+  formatting:
     runs-on: ubuntu-latest
     steps:
       - name: Setup node
@@ -18,4 +18,4 @@ jobs:
         run: npm install --save-dev --save-exact prettier
 
       - name: Check formatting
-        run: npx prettier --check src/
+        run: npx prettier --check .
