--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@nuxt/image": "^1.8.0",
     "@tailwindcss/typography": "^0.5.15",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
