--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "lucide-vue-next": "^0.453.0",
     "mongoose": "^8.6.3",
     "mongoose-bcrypt": "^1.11.0",
     "nuxt": "^3.13.0",
