--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "typescript": "^5.6.2",
     "vue": "latest",
     "vue-router": "latest",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^2.0.0-rc.5",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@nuxt/image": "^1.8.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/file-saver": "^2.0.7",
+    "@types/web-push": "^3.6.3",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.14",
     "postcss": "^8.4.47",
