add: import/export calendar

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@nuxt/eslint": "^0.5.7",
     "@nuxtjs/mdc": "^0.9.0",
     "@sidebase/nuxt-auth": "^0.6.7",
+    "datebook": "^8.0.1",
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "file-saver": "^2.0.5",
     "ical.js": "^2.1.0",
     "lucide-vue-next": "^0.453.0",
     "mongoose": "^8.6.3",
@@ -30,6 +32,7 @@
   "devDependencies": {
     "@nuxt/image": "^1.8.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/file-saver": "^2.0.7",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
