--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nuxt/image": "^1.8.0",
     "@tailwindcss/typography": "^0.5.15",
     "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.14",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
