--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "nuxt": "^3.13.0",
     "typescript": "^5.6.2",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@nuxt/image": "^1.8.0",
