--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "mongoose": "^8.6.3",
     "mongoose-bcrypt": "^1.11.0",
     "nuxt": "^3.13.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "typescript": "^5.6.2",
     "vue": "latest",
     "vue-router": "latest",
