--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/eslint": "^0.5.7",
     "@nuxtjs/mdc": "^0.9.0",
     "@sidebase/nuxt-auth": "^0.6.7",
+    "@vueuse/sound": "^2.1.3",
     "datebook": "^8.0.1",
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
@@ -45,5 +46,8 @@
     "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.12",
     "vue-tsc": "^2.1.6"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
