--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/eslint": "^0.5.7",
     "@nuxtjs/mdc": "^0.9.0",
     "@sidebase/nuxt-auth": "^0.6.7",
+    "@vueuse/nuxt": "^12.3.0",
     "@vueuse/sound": "^2.1.3",
     "datebook": "^8.0.1",
     "eslint": "^9.10.0",
