--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/file-saver": "^2.0.7",
     "@types/web-push": "^3.6.3",
+    "@vite-pwa/nuxt": "^0.10.6",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.14",
     "postcss": "^8.4.47",
